# collatz-data-science

./: .dockerignore  .env.example  .env.prod  .env.qa  .env.sandbox  .env.uat  .gitignore  .pre-commit-config.yaml  DEPLOYMENT.md  DOCKER_HUB_SETUP.md  Dockerfile  FIRST_ISSUE.md  GITHUB_CONTAINER_REGISTRY_SETUP.md  MILESTONES.md  README.md  USER_STORIES_LOCAL.md  docker-compose.prod.yml  docker-compose.qa.yml  docker-compose.sandbox.yml  docker-compose.uat.yml  docker-compose.yml  environment.yml  pyproject.toml  pytest.ini  requirements.txt  test_notebook_functions.py
.github/: USER_STORIES.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  development_task.md  feature_request.md
.github/issues/: 01-project-foundation.md  02-core-algorithm-implementation.md  03-data-pipeline-storage.md  04-dashboard-visualization.md  05-advanced-analysis-statistics.md  06-performance-optimization.md  07-testing-quality-assurance.md  08-documentation-user-guides.md  09-production-deployment.md  10-advanced-features-research.md
.github/workflows/: ci-cd.yml  docs.yml  performance.yml  security.yml
dashboard/: app.py
notebooks/: .gitkeep  01_collatz_analysis.ipynb  02_generate_collatz_data.ipynb  query_database.ipynb  test_database_connection.ipynb
sql/: 01_create_tables.sql  02_create_indexes.sql  03_create_views.sql  04_create_functions.sql  05_insert_sample_data.sql
src/collatz/: __init__.py  core.py  database.py  sequence.py
tests/: test_collatz.py  test_database.py  test_performance.py
